<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!--android:scrollbars="none" => Kaydırma çubuğu olmasın-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="serif-monospace"
                android:gravity="end"
                android:padding="10dp"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </LinearLayout>

    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="serif-monospace"
                android:gravity="end"
                android:padding="10dp"
                android:textSize="24sp" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/operators_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickClear"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/clear"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/operators_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickOperator"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/divide"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/operators_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickOperator"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/multiply"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/operators_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickDel"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/delete"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickOperandandBrackets"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="7"
                android:textSize="40sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickOperandandBrackets"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="8"
                android:textSize="40sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickOperandandBrackets"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="9"
                android:textSize="40sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btnSubtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/operators_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickSubtract"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/subtract"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickOperandandBrackets"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="4"
                android:textSize="40sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickOperandandBrackets"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="5"
                android:textSize="40sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickOperandandBrackets"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="6"
                android:textSize="40sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/operators_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickOperator"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/add"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickOperandandBrackets"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="1"
                android:textSize="40sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickOperandandBrackets"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="2"
                android:textSize="40sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickOperandandBrackets"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="3"
                android:textSize="40sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btnVirgule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickVirgule"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/virgule"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBracketOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickOperandandBrackets"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/bracketOpen"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickOperandandBrackets"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="0"
                android:textSize="40sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btnBracketClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickOperandandBrackets"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/bracketClose"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/equal_selector"
                android:fontFamily="serif-monospace"
                android:onClick="clickEqual"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/equal"
                android:textColor="@android:color/white"
                android:textSize="40sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>